Post App complete

--- a/Stars/Stars/static/css/style.css
+++ b/Stars/Stars/static/css/style.css
@@ -48,8 +48,8 @@ a:hover {
 
 .banner {
     display: block;
-    width: 100%;
-    max-width: 800px;
+    width: 60%;
+    max-width: 60%;
 }
 
 .form-with-validation {
