--- a/Stars/Stars/templates/layout.html
+++ b/Stars/Stars/templates/layout.html
@@ -14,10 +14,11 @@
 </head>
 <body>
     <nav>
-        <a href="/"><span role="img" aria-label="Home">🏡</span></a> |
-        <a href="/about"><span role="img" aria-label="About">🅰️</span></a> |
-        <a href="{% url 'posts:list' %}"><span role="img" aria-label="Posts">📬</span></a> |
-        <a href="/contact">📞</a>
+        <a href="/"><span role="img" aria-label="Home" title="Home">🏡</span></a> |
+        <a href="/about"><span role="img" aria-label="About" title="About">🅰️</span></a> |
+        <a href="{% url 'posts:list' %}"><span role="img" aria-label="Posts" title="Posts">📬</span></a> |
+        <a href="{% url 'users:register' %}"><span role="img" aria-label="Register" title="Register">🧾</span></a> |
+        <a href="/contact"><span role="img" aria-label="Contact" title="Contact">📞</span></a>
     </nav>
     <main>
         {% block content %}
